<?xml version="1.0"?>
<package format="2">
  <name>zed_open_capture_ros
  </name>
  <version>0.0.0</version>
  <description>The zed_open_capture_ros package</description>

  <maintainer email="tengelbracht@ethz.ch">Tim Engelbracht</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Build export dependencies -->
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>camera_info_manager</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <!-- Execution dependencies -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Optional: Dynamic reconfigure GUI integration -->
  <exec_depend>rqt_reconfigure</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>